<resources>
    <string name="app_name">Mão Aberta</string>
    <string name="facebook_app_id">256614064868751</string>
    <string name="nome_projeto">Projeto Mão Aberta</string>
    <string name="google_maps_key">AIzaSyDe22eevXf3tDGFtOO2memAmjo4IgGuaGU</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_agora">Não tem cadastro? Cadastre-se agora!</string>
    <string name="nome_cliente">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="string_text_facebook">Entrar com Facebook</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="string_text_gmail">Entrar com Gmail</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="razao_social">Razão Social</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="cnpj">CNPJ</string>
    <string name="nome_responsavel">Nome do Responsável</string>
    <string name="endereco">Endereço</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="site">Site</string>
    <string name="descricao">Descrição</string>
    <string name="bem_vindo">BEM VINDO AO MÃO ABERTA</string>
    <string name="ajude">Ajude Instituições</string>
    <string name="disponibilidade">Com o que quiser e quando puder.</string>
    <string name="cadastro">Cadastro</string>
    <string name="configuracoes">Configurações</string>
    <string name="login">Login</string>
    <string name="perfil_organizacao">Perfil Organização</string>
    <string name="atualizar_dados">Atualizar Dados</string>
    <string name="escolher_foto">Escolher Foto...</string>
    <string name="sobre">Sobre</string>
    <string name="projeto_mao_aberta_no_github">Projeto Mão Aberta no Github</string>
    <string name="logar">Logar</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="solicitar_nova_senha">Solicitar nova senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="campos_nao_preenchidos">Alguns campos não foram preenchidos. Por favor, preencher todos os campos!</string>
    <string name="falha_nos_dados">Erro na recuperação dos dados da conta. Por favor, tente novamente!</string>
    <string name="falha_autenticacao">Não foi possível realizar a autenticação. Por favor, tente novamente!</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="usuario_atualizado">Usuário atualizado com sucesso!</string>
    <string name="senha_curta">Senha curta. Digite pelo menos 6 caracteres para definir sua senha.</string>
    <string name="senhas_diferentes">Senha e Confirmação de Senha devem ser iguais. Digite novamente!</string>
    <string name="dados_incorretos">Email ou senha inválidos. Por favor, digite novamente!</string>
    <string name="preencher_campos">Por favor, preencha todos os campos para logar.</string>
    <string name="sair_app">Deseja mesmo sair do aplicativo?</string>
    <string name="seja_bem_vindo">Seja bem vindo ao Mão Aberta!</string>
    <string name="pre_cadastro">Dados para Cadastro</string>
    <string name="cadastrar_novo_usuario">Cadastrar Novo Usuário</string>
    <string name="perfil">Perfil</string>
    <string name="atualizacao_usuario_sucesso">Usuário atualizado com sucesso!</string>
    <string name="usuario_inexistente">Usuário não existe</string>
    <string name="erro_atualizar_dados_usuario">Não foi possível atualizar os dados do usuário. Por favor, tente novamente!</string>
    <string name="preencha_todos_campos">Preencha todos os campos para poder utilizar as funcionalidades do sistema!</string>
    <string name="anuncios_tab_title">Anúncios</string>
    <string name="entidades_tab_title">Entidades</string>
    <string name="sobre_tab_title">Sobre</string>
    <string name="meus_anuncios_tab_title">Meus Anúncios</string>
    <string name="usuario_cadastrado_sucesso">Usuário Cadastrado com sucesso!</string>
    <string name="erro_recuperacao_dados_usuario">Erro na recuperação dos dados do usuário. Por favor, tente novamente!</string>
    <string name="organizacao_atualizada_sucesso">Organização atualizada com sucesso!</string>
    <string name="erro_atualizacao_organizacao">Erro na atualização dos dados. Por favor, tente novamente!</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="novo_anuncio">Novo Anúncio</string>
    <string name="postar">Postar</string>
    <string name="data_de_inicio">Data de Início</string>
    <string name="data_limite">Data de Fim</string>
    <string name="criacao_anuncio_sucesso">Anúncio criado com sucesso!</string>
    <string name="falha_criacao_anuncio">Falha ao criar o anúncio!</string>
    <string name="alerta_selecao_data">Atenção! Data de início do anúncio deve ser anterior à data de encerramento!</string>
    <string name="titulo">Título:</string>
    <string name="tipo">Tipo:</string>
    <string name="editar_anuncio">Editar Anúncio</string>
    <string name="atualizar_anuncio">ATUALIZAR ANÚNCIO</string>
    <string name="demonstrar_interesse">Demonstrar Interesse</string>
    <string name="acesse_nosso_website">Acesse nosso WebSite</string>
    <string name="texto_apresentacao">Tem como objetivo fornecer uma aplicação Web e Mobile para que asilos, orfanatos e escolas que precisam de ajuda possam ter maior visibilidade e o público possa ajudar conforme viabilidade.</string>
    <string name="como_funciona">Como Funciona</string>
    <string name="cancelar_interesse">CANCELAR INTERESSE</string>
    <string name="meus_interesses">Meus Interesses</string>
    <string name="ver_interessados">Ver Interessados</string>
    <string name="desenvolvido_por">Desenvolvido por:</string>
    <string name="nome_desenvolvedor">Vinicius Reia Canalles</string>
    <string name="versao_app">© 2017 - v%s</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="endereco_desconhecido">Enredeço desconhecido</string>
    <string name="selecionar_posicao">Selecionar Posição</string>
    <string name="notif_action_reply">RESPONDER</string>
</resources>
