<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorApp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_text_razao_social_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/razao_social"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>
        
        <EditText
            android:id="@+id/edit_text_nome_fantasia_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_razao_social_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/nome_fantasia"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>
        
        <EditText
            android:id="@+id/edit_text_cnpj_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_nome_fantasia_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/cnpj"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>
        
        <EditText
            android:id="@+id/edit_text_nome_responsavel_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_cnpj_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/nome_responsavel"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_email_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_nome_responsavel_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_telefone_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_email_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_senha_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_telefone_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_confirmar_senha_organizacao"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_senha_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/button_cadastrar_organizacao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edit_text_confirmar_senha_organizacao"
            android:layout_marginTop="10dp"
            android:background="@color/tabLayoutBottomColor"
            android:text="@string/cadastrar"
            android:textAlignment="center"
            android:textColor="@color/textColorWhite"
            android:textSize="15sp"/>

    </RelativeLayout>

</LinearLayout>