<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorApp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_logo_perfil_organizacao"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_mao_aberta" />

        <EditText
            android:id="@+id/edit_text_razao_social_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/image_view_logo_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/razao_social"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edit_text_nome_fantasia_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_razao_social_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/nome_fantasia"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_cnpj_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_nome_fantasia_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/cnpj"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_nome_responsavel_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_cnpj_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/nome_responsavel"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_email_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_nome_responsavel_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_telefone_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_email_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_endereco_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_telefone_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/endereco"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_facebook_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_endereco_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/facebook"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_twitter_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_facebook_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/twitter"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_site_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_twitter_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/site"
            android:inputType="textWebEditText"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_descricao_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_site_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/descricao"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_senha_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_descricao_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edit_text_confirmar_senha_perfil_organizacao"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_senha_perfil_organizacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/textColorBlack"
            android:textSize="15sp"
            android:textStyle="normal"/>

    </RelativeLayout>

</ScrollView>