<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorWhite">

    <ImageView
        android:id="@+id/image_view_logo_tab_sobre"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/sobre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/logo_mao_aberta"/>

    <TextView
        android:id="@+id/text_view_projeto_mao_aberta_sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/nome_projeto"
        android:textAlignment="center"
        android:textColor="@color/textColorBlack"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo_tab_sobre"
        app:layout_constraintVertical_bias="0.129"/>

    <LinearLayout
        android:id="@+id/linear_layout_website"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/text_view_projeto_mao_aberta_sobre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_home"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/acesse_nosso_website"
            android:textColor="@color/textColorWhite"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>