<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorApp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:id="@+id/relative_layout_image_logo_perfil_cliente"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_view_logo_perfil_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_mao_aberta"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/text_view_escolher_foto_perfil_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="false"
                    android:text="@string/escolher_foto"
                    android:textColor="@color/textColorWhite"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    android:typeface="serif"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_text_nome_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:layout_below="@id/relative_layout_image_logo_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="sans-serif"
                android:hint="@string/nome_cliente"
                android:inputType="textPersonName"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/textColorBlack"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/edit_text_email_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:layout_below="@id/edit_text_nome_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:enabled="false"
                android:clickable="false"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/textColorBlack"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/edit_text_telefone_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:layout_below="@id/edit_text_email_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="sans-serif"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/textColorBlack"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/edit_text_senha_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:layout_below="@id/edit_text_telefone_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="sans-serif"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/textColorBlack"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/edit_text_confirmar_senha_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:layout_below="@id/edit_text_senha_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="sans-serif"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/textColorBlack"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <Button
                android:id="@+id/botao_salvar_perfil_cliente"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_below="@id/edit_text_confirmar_senha_perfil_cliente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="sans-serif"
                android:text="@string/salvar"
                android:textAlignment="center"
                android:textColor="@color/textColorWhite"
                android:textSize="15sp"
                android:textStyle="normal"/>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>